--- a/src/styles/imports/colors.scss
+++ b/src/styles/imports/colors.scss
@@ -1,2 +1,14 @@
 $background: rgb(148, 117, 169);
 $white: rgb(255, 255, 255);
+$black: rgb(0, 0, 0);
+$gray: rgb(128, 128, 128);
+$red: rgb(255, 0, 0);
+$green: rgb(0, 255, 0);
+$blue: rgb(0, 0, 255);
+$yellow: rgb(255, 255, 0);
+$orange: rgb(255, 165, 0);
+$purple: rgb(128, 0, 128);
+$brown: rgb(165, 42, 42);
+$teal: rgb(0, 128, 128);
+$navy: rgb(0, 0, 128);
+$maroon: rgb(128, 0, 0);
