--- a/src/styles/global/styles.scss
+++ b/src/styles/global/styles.scss
@@ -18,7 +18,6 @@ html {
 
 html,
 body {
-	// background-color: var(--colors-black);
 	color: var(--colors-white);
 	font-family: sans-serif;
 }
@@ -36,19 +35,19 @@ a {
 	}
 }
 
-/* width */
-::-webkit-scrollbar {
-	width: 10px;
-}
+// /* width */
+// ::-webkit-scrollbar {
+// 	width: 10px;
+// }
 
-/* Track */
-::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 5px rgb(255, 255, 255);
-	border-radius: 10px;
-}
+// /* Track */
+// ::-webkit-scrollbar-track {
+// 	box-shadow: inset 0 0 5px rgb(255, 255, 255);
+// 	border-radius: 10px;
+// }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-	background: var(--colors-green);
-	border-radius: 10px;
-}
+// /* Handle */
+// ::-webkit-scrollbar-thumb {
+// 	background: var(--colors-green);
+// 	border-radius: 10px;
+// }
