--- a/src/styles/global/styles.css
+++ b/src/styles/global/styles.css
@@ -12,7 +12,7 @@
 }
 
 html {
-  background: rgb(148, 117, 169);
+  background: rgb(19, 19, 19);
 }
 
 html,
@@ -30,4 +30,20 @@ a {
 a:hover, a:visited {
   color: var(--colors-blue);
   text-decoration: none;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgb(46, 46, 46);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: white;
+  border-radius: 10px;
 }
