--- a/src/styles/global/styles.scss
+++ b/src/styles/global/styles.scss
@@ -13,7 +13,9 @@
 }
 
 html {
-	background: rgb(148, 117, 169);
+	// background: rgb(148, 117, 169);
+	background: rgb(19, 19, 19);
+
 	// width: 100vw;
 }
 
@@ -36,19 +38,20 @@ a {
 	}
 }
 
-// /* width */
-// ::-webkit-scrollbar {
-// 	width: 10px;
-// }
+/* width */
+::-webkit-scrollbar {
+	width: 10px;
+}
 
-// /* Track */
-// ::-webkit-scrollbar-track {
-// 	box-shadow: inset 0 0 5px rgb(255, 255, 255);
-// 	border-radius: 10px;
-// }
+/* Track */
+::-webkit-scrollbar-track {
+	// box-shadow: inset 0 0 5px rgb(255, 255, 255);
+	// border-radius: 10px;
+	background:rgba(46, 46, 46);
+}
 
-// /* Handle */
-// ::-webkit-scrollbar-thumb {
-// 	background: var(--colors-green);
-// 	border-radius: 10px;
-// }
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: white;
+	border-radius: 10px;
+}
