--- a/src/styles/global/styles.scss
+++ b/src/styles/global/styles.scss
@@ -40,14 +40,14 @@ a {
 
 /* width */
 ::-webkit-scrollbar {
-	width: 10px;
+	width: 0;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
 	// box-shadow: inset 0 0 5px rgb(255, 255, 255);
 	// border-radius: 10px;
-	background:rgba(46, 46, 46);
+	background: rgba(46, 46, 46);
 }
 
 /* Handle */
